--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "app",
-  "version": "0.1.0",
+  "name": "iview-nft-fe",
+  "version": "1.0.0",
+  "description": "frontend code for iview-nft project",
+  "main": "index.js",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -10,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ethers": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
@@ -20,7 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,6 +44,8 @@
       "last 1 safari version"
     ]
   },
+  "author": "iView Labs Pvt. Ltd.",
+  "license": "ISC",
   "devDependencies": {
     "source-map-loader": "^4.0.1",
     "webpack": "^5.82.0"
