--- a/app/package.json
+++ b/app/package.json
@@ -9,14 +9,17 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "@rainbow-me/rainbowkit": "^0.12.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ethers": "^6.3.0",
+    "ethers": "^5.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "viem": "^0.3.19",
+    "wagmi": "^1.0.1",
     "web-vitals": "^2.1.4",
     "web3": "^1.9.0"
   },
