Change the of landing page and main page

--- a/app/package.json
+++ b/app/package.json
@@ -11,15 +11,21 @@
     "@mui/material": "^5.12.3",
     "@rainbow-me/rainbowkit": "^0.12.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^0.9.330",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.5.4",
+    "framer-motion": "^7.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.9.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3",
     "viem": "^0.3.19",
     "wagmi": "^1.0.1",
     "web-vitals": "^2.1.4",
