initial structure for api inside frontend

--- a/app/package.json
+++ b/app/package.json
@@ -9,14 +9,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
-    "@rainbow-me/rainbowkit": "^0.12.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.330",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "alchemy-sdk": "^2.8.3",
+    "axios": "^1.4.0",
     "ethers": "^5.5.4",
+    "form-data": "^4.0.0",
     "framer-motion": "^7.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,8 +29,6 @@
     "react-tsparticles": "^2.9.3",
     "redux-persist": "^6.0.0",
     "tsparticles": "^2.9.3",
-    "viem": "^0.3.19",
-    "wagmi": "^1.0.1",
     "web-vitals": "^2.1.4",
     "web3": "^1.9.0"
   },
