eth balance api implementation

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,3 +1,4 @@
+ALCHEMY_API_KEY=<alchemy-api-key>
 SEPOLIA_URL=<sepolia-alchemy-api-url>
 COIN_ADDRESS=<iview-coin-contract-address>
 NFT_ADDRESS=<nft-contract-address>
