--- a/app/package.json
+++ b/app/package.json
@@ -7,15 +7,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.130",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/react": "^13.4.0",
     "alchemy-sdk": "^2.8.3",
     "axios": "^1.4.0",
+    "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
     "ethers": "^5.5.4",
     "form-data": "^4.0.0",
     "framer-motion": "^7.6.7",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -23,12 +27,16 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "tsparticles": "^2.9.3",
     "web-vitals": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "json-server": "json-server --watch data/ownedNft.json --port 3004",
+    "json-server-user": "json-server --watch data/allNfts.json --port 3005",
+    "iTrove": "concurrently \"npm start\" \"npm run json-server\" \"npm run json-server-user\"",
     "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject"
